@@ -1,3 +1,8 @@
+2001-11-07  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Display/GAIA.pm (send_to_gaia): Attempt to catch null string
+	return from recv
+
 2001-11-01  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Print.pm (orac_print): Add orac_throw
